--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
-<!doctype html>
-<html lang="en">
+<!-- foxboro-frontend/index.html -->
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- ✅ Bootstrap CSS 5.3.2 desde CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Sistema DCS Foxboro</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Tu JS principal -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
